#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
# AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_INIT(cmysql, 1.0.0, lzq@liuker.xyz)
AM_INIT_AUTOMAKE
# AC_CONFIG_SRCDIR([CMysql.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS(/usr/include/mysql/mysql.h)


# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
# AC_CHECK_LIB(/usr/lib/mysql/mysqlclient)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

